--- a/index.html
+++ b/index.html
@@ -11,147 +11,193 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href=" https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!--Шапка-->
     <header class="header">
-      <nav>
-        <a href="./index.html" lang="en" class="link logo"
-          >Web<span class="logo-header">Studio</span></a
-        >
-        <ul class="header-nav list">
-          <li><a href="./index.html" class="link">Студія</a></li>
-          <li><a href="./potfolio.html" class="link current">Портфоліо</a></li>
-          <li><a href="#" class="link">Контакти</a></li>
+      <div class="container flex-container">
+        <nav class="nav flex-container">
+          <a href="./index.html" lang="en" class="link logo"
+            >Web<span class="logo-header">Studio</span></a
+          >
+          <ul class="list  header-nav flex-container">
+            <li class="header-nav-item"><a href="./index.html" class="link current">Студія</a></li>
+            <li class="header-nav-item"><a href="./potfolio.html" class="link">Портфоліо</a></li>
+            <li class="header-nav-item"><a href="#" class="link">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="list header-contacts flex-container">
+          <li class="header-contacts-item">
+            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          </li>
+          <li class="header-contacts-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
-      </nav>
-      <ul class="header-contacts list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-        </li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
     <main>
       <!--Герой-->
-      <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="button">Замовити послугу</button>
+      <section class="hero section">
+        <div class="container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button type="button" class="button">Замовити послугу</button>
+        </div>
       </section>
 
       <!--Особливості-->
-      <section class="features">
-        <!-- Заголовок прихований -->
-        <h2 class="features-title">Особливості</h2>
+      <section class="features section">
+        <div class="container">
+          <!-- Заголовок прихований -->
+          <h2 class="features-title">Особливості</h2>
 
-        <ul class="list">
-          <li>
-            <h3 class="features-sub-title">Увага до деталей</h3>
-            <p class="features-text">
-              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-sub-title">Пунктуальність</h3>
-            <p class="features-features-text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-sub-title">Планування</h3>
-            <p class="features-text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-sub-title">Сучасні технології</h3>
-            <p class="features-text">
-              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-            </p>
-          </li>
-        </ul>
+          <ul class="list flex-container">
+            <li class="feauteres-item">
+              <h3 class="features-sub-title">Увага до деталей</h3>
+              <p class="features-text">
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+              </p>
+            </li>
+            <li class="feauteres-item">
+              <h3 class="features-sub-title">Пунктуальність</h3>
+              <p class="features-features-text">
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+              </p>
+            </li>
+            <li class="feauteres-item">
+              <h3 class="features-sub-title">Планування</h3>
+              <p class="features-text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="feauteres-item">
+              <h3 class="features-sub-title">Сучасні технології</h3>
+              <p class="features-text">
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Чим ми займаємося-->
-      <section class="work">
-        <h2 class="work-title">Чим ми займаємося</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/development.jpg" alt="Створення сайтів" width="370" height="294" />
-          </li>
-          <li>
-            <img src="./images/mobile.jpg" alt="Мобільна розробка" width="370" height="294" />
-          </li>
-          <li>
-            <img src="./images/disign.jpg" alt="Графічний дизайн" width="370" height="294" />
-          </li>
-        </ul>
+      <section class="work section">
+        <div class="container">
+          <h2 class="work-title">Чим ми займаємося</h2>
+          <ul class="list flex-container">
+            <li class="work-item">
+              <img
+                class="card"
+                src="./images/development.jpg"
+                alt="Створення сайтів"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="work-item">
+              <img
+                class="card"
+                src="./images/mobile.jpg"
+                alt="Мобільна розробка"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="work-item">
+              <img
+                class="card"
+                src="./images/disign.jpg"
+                alt="Графічний дизайн"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Наша команда-->
-      <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="list">
-          <li class="card">
-            <img
-              src="./images/igor-demiyanenko.jpg"
-              alt="Фото Ігоря Дем'яненко"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-sub-title">Ігор Дем'яненко</h3>
-            <p lang="en" class="team-text">Product Designer</p>
-          </li>
-          <li class="card">
-            <img src="./images/olga-repina.jpg" alt="Фото Ольгі Рєпіної" width="270" height="260" />
-            <h3 class="team-sub-title">Ольга Рєпіна</h3>
-            <p lang="en" class="team-text">Frontend Developer</p>
-          </li>
-          <li class="card">
-            <img
-              src="./images/mykola-tarasov.jpg"
-              alt="Фото Миколи Тарасова"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-sub-title">Микола Тарасов</h3>
-            <p lang="en" class="team-text">Marketing</p>
-          </li>
-          <li class="card">
-            <img
-              src="./images/mykhailo-ermakov.jpg"
-              alt="Фото Михайло Єрмакова"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-sub-title">Михайло Єрмаков</h3>
-            <p lang="en" class="team-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team section">
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+
+          <ul class="list flex-container"">
+            <li class="team-item">
+              <img
+                class="card"
+                src="./images/igor-demiyanenko.jpg"
+                alt="Фото Ігоря Дем'яненко"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-sub-title">Ігор Дем'яненко</h3>
+              <p lang="en" class="team-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="card"
+                src="./images/olga-repina.jpg"
+                alt="Фото Ольгі Рєпіної"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-sub-title">Ольга Рєпіна</h3>
+              <p lang="en" class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="card"
+                src="./images/mykola-tarasov.jpg"
+                alt="Фото Миколи Тарасова"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-sub-title">Микола Тарасов</h3>
+              <p lang="en" class="team-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="card"
+                src="./images/mykhailo-ermakov.jpg"
+                alt="Фото Михайло Єрмакова"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-sub-title">Михайло Єрмаков</h3>
+              <p lang="en" class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--Підвал-->
     <footer class="footer">
-      <a href="./index.html" lang="en" class="logo link"
-        >Web<span class="logo-footer">Studio</span></a
-      >
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              href="https://goo.gl/maps/uNxrcM7Ruqw2PwGc9"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="link"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li><a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" lang="en" class="logo link"
+          >Web<span class="logo-footer">Studio</span></a
+        >
+        <address>
+          <ul class="list footer-adress">
+            <li class="footer-item">
+              <a
+                href="https://goo.gl/maps/uNxrcM7Ruqw2PwGc9"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="link"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li class="footer-item">
+              <a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a>
+            </li>
+            <li class="footer-item"><a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
