--- a/potfolio.html
+++ b/potfolio.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href=" https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -35,117 +39,154 @@
     </header>
 
     <main>
-      <section class="portfolio">
-        <!-- Заголовок прихований -->
-        <h1 class="portfolio-title">Портфоліо</h1>
+      <section class="portfolio section">
+        <div class="container">
+          <!-- Заголовок прихований -->
+          <h1 class="portfolio-title">Портфоліо</h1>
 
-        <!-- Фільтр -->
-        <ul class="portfolio-filter list">
-          <li><button type="button" class="button current">Усі</button></li>
-          <li><button type="button" class="button">Веб-сайти</button></li>
-          <li><button type="button" class="button">Додатки</button></li>
-          <li><button type="button" class="button">Дизайн</button></li>
-          <li><button type="button" class="button">Маркетинг</button></li>
-        </ul>
+          <!-- Фільтр -->
+          <ul class="list portfolio-filter flex-container">
+            <li><button type="button" class="button current">Усі</button></li>
+            <li><button type="button" class="button">Веб-сайти</button></li>
+            <li><button type="button" class="button">Додатки</button></li>
+            <li><button type="button" class="button">Дизайн</button></li>
+            <li><button type="button" class="button">Маркетинг</button></li>
+          </ul>
 
-        <!-- Список портфоліо -->
+          <!-- Список портфоліо -->
 
-        <ul class="list">
-          <li>
-            <!-- Перехід на зовнішню сторінку, тому посилання за target -->
+          <ul class="list flex-container">
+            <li class="portfolio-item">
+              <!-- Перехід на зовнішню сторінку, тому посилання за target -->
 
-            <a href="" target="_blank" rel="noopener noreferrer" class="link">
-              <img src="./images/technocrack.jpg" alt="Технокряк" />
-              <h2 class="portfolio-sub-title">Технокряк</h2>
-              <p class="portfolio-text">Веб-сайт</p>
-            </a>
-          </li>
+              <a href="" target="_blank" rel="noopener noreferrer" class="link">
+                <img class="card" src="./images/technocrack.jpg" alt="Технокряк" />
+                <div class="portfolio-card-footer">
+                  <h2 class="portfolio-sub-title">Технокряк</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div></a
+              >
+            </li>
 
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer" class="link">
-              <img
-                src="./images/new-orlean-golden-star.jpg"
-                alt="Постер New Orlean vs Golden Star"
-              />
-              <h2 class="portfolio-sub-title">
-                Постер <span lang="en">Orlean vs Golden Star</span>
-              </h2>
-              <p class="portfolio-text">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer" class="link">
-              <img src="./images/seafood.jpg" alt="Ресторан Seafood" />
-              <h2 class="portfolio-sub-title">Ресторан <span lang="en">Seafood</span></h2>
-              <p class="portfolio-text">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer" class="link">
-              <img src="./images/prime.jpg" alt="Проєкт Prime" />
-              <h2 class="portfolio-sub-title">Проєкт <span lang="en">Prime</span></h2>
-              <p class="portfolio-text">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer" class="link">
-              <img src="./images/boxes.jpg" alt="Проєкт Boxes" />
-              <h2 class="portfolio-sub-title">Проєкт <span lang="en">Boxes</span></h2>
-              <p class="portfolio-text">Додаток</p></a
-            >
-          </li>
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer" class="link">
-              <img src="./images/inspiration-has-no-border.jpg" alt="Inspiration has no Borders" />
-              <h2 lang="en" class="portfolio-sub-title">Inspiration has no Borders</h2>
-              <p class="portfolio-text">Веб-сайт</p></a
-            >
-          </li>
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer" class="link">
-              <img src="./images/limited-edition.jpg" alt="Видання Limited Edition" />
-              <h2 class="portfolio-sub-title">Видання <span lang="en">Limited Edition</span></h2>
-              <p class="portfolio-text">Дизайн</p></a
-            >
-          </li>
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer" class="link">
-              <img src="./images/lab.jpg" alt="Проєкт LAB" />
-              <h2 class="portfolio-sub-title">Проєкт <span lang="en">LAB</span></h2>
-              <p class="portfolio-text">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer" class="link">
-              <img src="./images/growing-buisness.jpg" alt="Growing Business" />
-              <h2 lang="en" class="portfolio-sub-title">Growing Business</h2>
-              <p class="portfolio-text">Додаток</p></a
-            >
-          </li>
-        </ul>
+            <li class="portfolio-item">
+              <a href="" target="_blank" rel="noopener noreferrer" class="link">
+                <img
+                  class="card"
+                  src="./images/new-orlean-golden-star.jpg"
+                  alt="Постер New Orlean vs Golden Star"
+                />
+                <div class="portfolio-card-footer">
+                  <h2 class="portfolio-sub-title">
+                    Постер <span lang="en">Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div></a
+              >
+            </li>
+            <li class="portfolio-item">
+              <a href="" target="_blank" rel="noopener noreferrer" class="link">
+                <img class="card" src="./images/seafood.jpg" alt="Ресторан Seafood" />
+                <div class="portfolio-card-footer">
+                  <h2 class="portfolio-sub-title">Ресторан <span lang="en">Seafood</span></h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div></a
+              >
+            </li>
+            <li class="portfolio-item">
+              <a href="" target="_blank" rel="noopener noreferrer" class="link">
+                <img class="card" src="./images/prime.jpg" alt="Проєкт Prime" />
+                <div class="portfolio-card-footer">
+                  <h2 class="portfolio-sub-title">Проєкт <span lang="en">Prime</span></h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div></a
+              >
+            </li>
+            <li class="portfolio-item">
+              <a href="" target="_blank" rel="noopener noreferrer" class="link">
+                <img class="card" src="./images/boxes.jpg" alt="Проєкт Boxes" />
+                <div class="portfolio-card-footer">
+                  <h2 class="portfolio-sub-title">Проєкт <span lang="en">Boxes</span></h2>
+                  <p class="portfolio-text">Додаток</p>
+                </div></a
+              >
+            </li>
+            <li class="portfolio-item">
+              <a href="" target="_blank" rel="noopener noreferrer" class="link">
+                <img
+                  class="card"
+                  src="./images/inspiration-has-no-border.jpg"
+                  alt="Inspiration has no Borders"
+                />
+                <div class="portfolio-card-footer">
+                  <h2 lang="en" class="portfolio-sub-title">Inspiration has no Borders</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div></a
+              >
+            </li>
+            <li class="portfolio-item">
+              <a href="" target="_blank" rel="noopener noreferrer" class="link">
+                <img
+                  class="card"
+                  src="./images/limited-edition.jpg"
+                  alt="Видання Limited Edition"
+                />
+                <div class="portfolio-card-footer">
+                  <h2 class="portfolio-sub-title">
+                    Видання <span lang="en">Limited Edition</span>
+                  </h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div></a
+              >
+            </li>
+            <li class="portfolio-item">
+              <a href="" target="_blank" rel="noopener noreferrer" class="link">
+                <img class="card" src="./images/lab.jpg" alt="Проєкт LAB" />
+                <div class="portfolio-card-footer">
+                  <h2 class="portfolio-sub-title">Проєкт <span lang="en">LAB</span></h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div></a
+              >
+            </li>
+            <li class="portfolio-item">
+              <a href="" target="_blank" rel="noopener noreferrer" class="link">
+                <img class="card" src="./images/growing-buisness.jpg" alt="Growing Business" />
+                <div class="portfolio-card-footer">
+                  <h2 lang="en" class="portfolio-sub-title">Growing Business</h2>
+                  <p class="portfolio-text">Додаток</p>
+                </div></a
+              >
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!--Підвал-->
     <footer class="footer">
-      <a href="./index.html" lang="en" class="logo link"
-        >Web<span class="logo-footer">Studio</span></a
-      >
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              href="https://goo.gl/maps/uNxrcM7Ruqw2PwGc9"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="link"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li><a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" lang="en" class="logo link"
+          >Web<span class="logo-footer">Studio</span></a
+        >
+        <address>
+          <ul class="list footer-adress">
+            <li class="footer-item">
+              <a
+                href="https://goo.gl/maps/uNxrcM7Ruqw2PwGc9"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="link"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li class="footer-item">
+              <a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a>
+            </li>
+            <li class="footer-item">
+              <a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
