--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a href="./index.html" lang="en" class="link logo"
             >Web<span class="logo-header">Studio</span></a
           >
-          <ul class="list  header-nav flex-container">
+          <ul class="list header-nav flex-container">
             <li class="header-nav-item"><a href="./index.html" class="link current">Студія</a></li>
             <li class="header-nav-item"><a href="./potfolio.html" class="link">Портфоліо</a></li>
             <li class="header-nav-item"><a href="#" class="link">Контакти</a></li>
@@ -36,7 +36,9 @@
           <li class="header-contacts-item">
             <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
           </li>
-          <li class="header-contacts-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+          <li class="header-contacts-item">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -88,6 +90,7 @@
       <section class="work section">
         <div class="container">
           <h2 class="work-title">Чим ми займаємося</h2>
+
           <ul class="list flex-container">
             <li class="work-item">
               <img
@@ -125,7 +128,7 @@
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
 
-          <ul class="list flex-container"">
+          <ul class="list flex-container">
             <li class="team-item">
               <img
                 class="card"
@@ -194,7 +197,9 @@
             <li class="footer-item">
               <a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a>
             </li>
-            <li class="footer-item"><a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a></li>
+            <li class="footer-item">
+              <a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a>
+            </li>
           </ul>
         </address>
       </div>
