--- a/potfolio.html
+++ b/potfolio.html
@@ -20,22 +20,28 @@
   <body>
     <!--Шапка-->
     <header class="header">
-      <nav>
-        <a href="./index.html" lang="en" class="link logo"
-          >Web<span class="logo-header">Studio</span></a
-        >
-        <ul class="header-nav list">
-          <li><a href="./index.html" class="link">Студія</a></li>
-          <li><a href="./potfolio.html" class="link current">Портфоліо</a></li>
-          <li><a href="#" class="link">Контакти</a></li>
+      <div class="container flex-container">
+        <nav class="nav flex-container">
+          <a href="./index.html" lang="en" class="link logo"
+            >Web<span class="logo-header">Studio</span></a
+          >
+          <ul class="list header-nav flex-container">
+            <li class="header-nav-item"><a href="./index.html" class="link">Студія</a></li>
+            <li class="header-nav-item">
+              <a href="./potfolio.html" class="link current">Портфоліо</a>
+            </li>
+            <li class="header-nav-item"><a href="#" class="link">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="list header-contacts flex-container">
+          <li class="header-contacts-item">
+            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          </li>
+          <li class="header-contacts-item">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-      <ul class="header-contacts list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-        </li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
 
     <main>
@@ -46,21 +52,25 @@
 
           <!-- Фільтр -->
           <ul class="list portfolio-filter flex-container">
-            <li><button type="button" class="button current">Усі</button></li>
-            <li><button type="button" class="button">Веб-сайти</button></li>
-            <li><button type="button" class="button">Додатки</button></li>
-            <li><button type="button" class="button">Дизайн</button></li>
-            <li><button type="button" class="button">Маркетинг</button></li>
+            <li class="filter-item"><button type="button" class="button current">Усі</button></li>
+            <li class="filter-item"><button type="button" class="button">Веб-сайти</button></li>
+            <li class="filter-item"><button type="button" class="button">Додатки</button></li>
+            <li class="filter-item"><button type="button" class="button">Дизайн</button></li>
+            <li class="filter-item"><button type="button" class="button">Маркетинг</button></li>
           </ul>
 
           <!-- Список портфоліо -->
 
-          <ul class="list flex-container">
+          <ul class="list cards-list flex-container">
             <li class="portfolio-item">
-              <!-- Перехід на зовнішню сторінку, тому посилання за target -->
-
               <a href="" target="_blank" rel="noopener noreferrer" class="link">
-                <img class="card" src="./images/technocrack.jpg" alt="Технокряк" />
+                <img
+                  class="card"
+                  src="./images/technocrack.jpg"
+                  alt="Технокряк"
+                  width="370"
+                  height="294"
+                />
                 <div class="portfolio-card-footer">
                   <h2 class="portfolio-sub-title">Технокряк</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -74,6 +84,8 @@
                   class="card"
                   src="./images/new-orlean-golden-star.jpg"
                   alt="Постер New Orlean vs Golden Star"
+                  width="370"
+                  height="294"
                 />
                 <div class="portfolio-card-footer">
                   <h2 class="portfolio-sub-title">
@@ -85,7 +97,13 @@
             </li>
             <li class="portfolio-item">
               <a href="" target="_blank" rel="noopener noreferrer" class="link">
-                <img class="card" src="./images/seafood.jpg" alt="Ресторан Seafood" />
+                <img
+                  class="card"
+                  src="./images/seafood.jpg"
+                  alt="Ресторан Seafood"
+                  width="370"
+                  height="294"
+                />
                 <div class="portfolio-card-footer">
                   <h2 class="portfolio-sub-title">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -94,7 +112,13 @@
             </li>
             <li class="portfolio-item">
               <a href="" target="_blank" rel="noopener noreferrer" class="link">
-                <img class="card" src="./images/prime.jpg" alt="Проєкт Prime" />
+                <img
+                  class="card"
+                  src="./images/prime.jpg"
+                  alt="Проєкт Prime"
+                  width="370"
+                  height="294"
+                />
                 <div class="portfolio-card-footer">
                   <h2 class="portfolio-sub-title">Проєкт <span lang="en">Prime</span></h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -103,7 +127,13 @@
             </li>
             <li class="portfolio-item">
               <a href="" target="_blank" rel="noopener noreferrer" class="link">
-                <img class="card" src="./images/boxes.jpg" alt="Проєкт Boxes" />
+                <img
+                  class="card"
+                  src="./images/boxes.jpg"
+                  alt="Проєкт Boxes"
+                  width="370"
+                  height="294"
+                />
                 <div class="portfolio-card-footer">
                   <h2 class="portfolio-sub-title">Проєкт <span lang="en">Boxes</span></h2>
                   <p class="portfolio-text">Додаток</p>
@@ -116,6 +146,8 @@
                   class="card"
                   src="./images/inspiration-has-no-border.jpg"
                   alt="Inspiration has no Borders"
+                  width="370"
+                  height="294"
                 />
                 <div class="portfolio-card-footer">
                   <h2 lang="en" class="portfolio-sub-title">Inspiration has no Borders</h2>
@@ -129,6 +161,8 @@
                   class="card"
                   src="./images/limited-edition.jpg"
                   alt="Видання Limited Edition"
+                  width="370"
+                  height="294"
                 />
                 <div class="portfolio-card-footer">
                   <h2 class="portfolio-sub-title">
@@ -140,7 +174,13 @@
             </li>
             <li class="portfolio-item">
               <a href="" target="_blank" rel="noopener noreferrer" class="link">
-                <img class="card" src="./images/lab.jpg" alt="Проєкт LAB" />
+                <img
+                  class="card"
+                  src="./images/lab.jpg"
+                  alt="Проєкт LAB"
+                  width="370"
+                  height="294"
+                />
                 <div class="portfolio-card-footer">
                   <h2 class="portfolio-sub-title">Проєкт <span lang="en">LAB</span></h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -149,7 +189,13 @@
             </li>
             <li class="portfolio-item">
               <a href="" target="_blank" rel="noopener noreferrer" class="link">
-                <img class="card" src="./images/growing-buisness.jpg" alt="Growing Business" />
+                <img
+                  class="card"
+                  src="./images/growing-buisness.jpg"
+                  alt="Growing Business"
+                  width="370"
+                  height="294"
+                />
                 <div class="portfolio-card-footer">
                   <h2 lang="en" class="portfolio-sub-title">Growing Business</h2>
                   <p class="portfolio-text">Додаток</p>
