--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
     <main>
       <!--Герой-->
-      <section class="hero section">
+      <section class="section hero">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="button">Замовити послугу</button>
@@ -52,7 +52,7 @@
       </section>
 
       <!--Особливості-->
-      <section class="features section">
+      <section class="section features">
         <div class="container">
           <!-- Заголовок прихований -->
           <h2 class="features-title">Особливості</h2>
@@ -87,7 +87,7 @@
       </section>
 
       <!--Чим ми займаємося-->
-      <section class="work section">
+      <section class="section work">
         <div class="container">
           <h2 class="work-title">Чим ми займаємося</h2>
 
@@ -124,7 +124,7 @@
       </section>
 
       <!--Наша команда-->
-      <section class="team section">
+      <section class="section team">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
 
