--- a/potfolio.html
+++ b/potfolio.html
@@ -45,12 +45,12 @@
     </header>
 
     <main>
-      <section class="portfolio section">
+      <section class="section portfolio">
         <div class="container">
           <!-- Заголовок прихований -->
           <h1 class="portfolio-title">Портфоліо</h1>
 
-          <!-- Фільтр -->
+          <!-- Фільтр портфоліо -->
           <ul class="list portfolio-filter flex-container">
             <li class="filter-item"><button type="button" class="button current">Усі</button></li>
             <li class="filter-item"><button type="button" class="button">Веб-сайти</button></li>
